chore: update for docs

--- a/syntax-test.html
+++ b/syntax-test.html
@@ -39,7 +39,7 @@
 <!--import highlight.js-->
 <script src="theme/highlight.js"></script>
 <!--import highlightjs.css from cdn-->
-<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release/build/styles/default.min.css">
+<link rel="stylesheet" href="https://harmonyos-dev.github.io/aigc-harmonyos-sample/highlight.css">
 <script src="assets/custom.js"></script>
 </body>
 </html>
