--- a/syntax-test.html
+++ b/syntax-test.html
@@ -36,6 +36,34 @@
     </code>
 </pre>
 
+<pre>
+    <code class="language-arkts">
+        Row() {
+          List({ space: 10 }) {
+            ListItem() {
+              Row({ space: 20 }) {
+                Image(this.avatarUrl)
+                  .width(40)
+                  .height(40)
+                Column() {
+                  Text(this.nickname)
+                    .fontSize(16)
+                    .fontWeight('bold')
+                  Text(this.lastMessage)
+                    .fontSize(12)
+                    .fontColor('#666666')
+                }
+              }
+            }
+          }
+          .width('100%')
+          .height(200)
+          .padding(10)
+          .backgroundColor(Color.Pink)
+        }
+    </code>
+</pre>
+
 <!--import highlight.js-->
 <script src="theme/highlight.js"></script>
 <!--import highlightjs.css from cdn-->
